добавление пакетов, файлов

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "My animation homework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "lint": "eslint . --fix",
+    "test": "jest",
+    "e2e": "jest --testPathPattern=./e2e/ --runInBand",
+    "coverage": "jest --coverage"
   },
   "author": "Zrazhevskii",
   "license": "ISC",
